--- a/style.css
+++ b/style.css
@@ -5,30 +5,22 @@ canvas {
   top: 0;
   left: 0;
 }
-
+body{
+  background-color: bisque;
+  margin: 0%;
+  height: auto;
+  width: 100%;
+}
 
 :root {
   --dark-bg: rgba(15, 15, 15, 0.95);
-  --spacing: 350px;
+
 
   font-family: brandon-grotesque, sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-
-main {
-  width: 100vw;
-  color: white;
-  z-index: 99;
-  position: absolute;
-  width: 100%;
-  margin: 0px auto;
-  padding: 120px 0px;
-  /* Create 12 seperate column */
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-}
 
 h1, h2, h3, blockquote {
   font-family: elevon, sans-serif;
@@ -48,8 +40,6 @@ canvas {
     background: var(--dark-bg);
     grid-column: 2 / span 10;
     font-size: 2.5rem;
-    padding: 2rem;
-    margin-bottom: var(--spacing);
   }
 
   section {
@@ -57,7 +47,7 @@ canvas {
     padding: 1rem;
     background: var(--dark-bg);
     font-size: 1.25rem;
-    line-height: 1.5;
+      line-height: 1.5;
     margin-bottom: var(--spacing);
   }
 
