--- a/style.css
+++ b/style.css
@@ -114,7 +114,9 @@ canvas {
     /* float: left; */
     color: #f2f2f2;
     text-align: center;
+    width: 10px;
     padding: 19px 16px;
+    border-radius:5px;
     text-decoration: none;
     font-size: 17px;
     transition: all 0.3s ease 0s;
@@ -126,11 +128,19 @@ canvas {
   
   .topnav a:hover{
     background-color: #ddd;
+    /* background-image:url('planets.gif'); background-repeat:repeat; */
+    background-position: center;
     color: black;
   }
   
   /* Add a color to the active/current link */
   a.active {
-    background-color: #ddd;
-    color: black;
+    background-image:url('planets1.gif'); 
+    background-repeat:repeat;
+    background-blend-mode: inherit;
+    background-position: center;
+    font-weight: bold;
+    font-size: 20px;
+    /* background-color: #ddd; */
+    color: white;
   }
