--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ canvas {
   }
 
   .topnav {
-    background-color: #000;
+    /* background-repeat:repeat; */
     /* overflow: hidden; */
     position: fixed;
     top: 0;
@@ -106,6 +106,13 @@ canvas {
   }
 
   .topnav h1{
+    background-image:url('sun.gif'); 
+    border-radius: 5px;
+    height: 50px;
+    width: 170px;
+    text-align: center;
+    background-size: 100%;
+    background-position: center;
     margin-right: auto;
   }
   
@@ -114,7 +121,6 @@ canvas {
     /* float: left; */
     color: #f2f2f2;
     text-align: center;
-    width: 10px;
     padding: 19px 16px;
     border-radius:5px;
     text-decoration: none;
@@ -137,7 +143,7 @@ canvas {
   a.active {
     background-image:url('planets1.gif'); 
     background-repeat:repeat;
-    background-blend-mode: inherit;
+    background-size: cover;
     background-position: center;
     font-weight: bold;
     font-size: 20px;
