--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ canvas {
     width: 170px;
     text-align: center;
     background-size: 100%;
+    color:#908cdc ;
     background-position: center;
     margin-right: auto;
   }
